# vvave

./: .arcconfig  .gitignore  CMakeLists.txt  JAppControl.cpp  JAppControl.h  LICENSE  README.md  install.pri  main.cpp  main.qml  org.kde.media.appdata.xml  org.kde.media.desktop  qml.qrc  vvave.cpp  vvave.h  vvave.pro
android_files/: AndroidManifest.xml  build.gradle
android_files/res/xml/: filepaths.xml
assets/: vvave.notifyrc
cmake/: FindTaglib.cmake
db/: Queries.js  collectionDB.cpp  collectionDB.h  script.sql
debian/: changelog  control  vvave.postinst
debian/source/: lintian-overrides
kde/: kde.pri  mpris2.cpp  mpris2.h  notify.cpp  notify.h
kde/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
models/albums/: albumsmodel.cpp  albumsmodel.h
models/cloud/: cloud.cpp  cloud.h
models/playlists/: playlistsmodel.cpp  playlistsmodel.h
models/tracks/: tracksmodel.cpp  tracksmodel.h
models/videos/: videosmodel.cpp  videosmodel.h
po/zh_CN/: mediaplayer.po
pulpo/: enums.h  htmlparser.cpp  htmlparser.h  pulpo.cpp  pulpo.h  pulpo.pri  service.cpp  service.h
pulpo/services/: deezerService.cpp  deezerService.h  geniusService.cpp  geniusService.h  lastfmService.cpp  lastfmService.h  lyricwikiaService.cpp  lyricwikiaService.h  musicbrainzService.cpp  musicbrainzService.h  spotifyService.cpp  spotifyService.h
services/jingos_dbus/: jingosdbus.cpp  jingosdbus.h
services/local/: LinkingDialog.qml  LinkingListModel.qml  LinkingView.qml  fileloader.h  linking.cpp  linking.h  mediastorage.cpp  mediastorage.h  player.cpp  player.h  socket.cpp  socket.h  taginfo.cpp  taginfo.h  youtubedl.cpp  youtubedl.h
services/web/: WebView.qml  WebViewLinux.qml  WebViewOther.qml  YouTube.qml  YoutubeHelper.js  YoutubeViewer.qml  abstractmusicprovider.cpp  abstractmusicprovider.h  youtube.cpp  youtube.h
services/web/NextCloud/: nextmusic.cpp  nextmusic.h
services/web/Spotify/: LoginForm.qml  Spotify.qml  spotify.cpp  spotify.h  spotify.html
utils/: Help.js  Player.js  bae.h  brain.cpp  brain.h
view_models/: BabeList.qml  ColorTagsBar.qml
view_models/BabeGrid/: BabeAlbum.qml  BabeGrid.qml
view_models/BabeTable/: BabeTable.qml  PlaylistDialog.qml  TableDelegate.qml  TableMenu.qml
widgets/: AlbumsView.qml  FloatingDisk.qml  FocusView.qml  FoldersView.qml  HProgressBar.qml  Loading.qml  MusicGridView.qml  MusicPlayControl.qml  PlayerView.qml  PlayerViewLeft.qml  SelectionBar.qml  SelectionBar1.qml  TracksView.qml  VideoGridView.qml  ViewOpPopup.qml
widgets/CloudView/: CloudView.qml
widgets/InfoView/: InfoView.qml  LyricsView.qml
widgets/MainPlaylist/: AlbumsRoll.qml  MainPlaylist.qml  PlaylistMenu.qml
widgets/PlaylistsView/: PlaylistsView.qml  PlaylistsViewModel.qml
widgets/SearchView/: SearchSuggestions.qml  SearchTable.qml
widgets/SettingsView/: SettingsDialog.qml  SourcesDialog.qml
windows_files/: README
windows_files/config/: config.xml
